# finam-tradebot

./: .clang-tidy  .clangd  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Dockerfile  README.md  compile_commands.json  conanfile.txt  docker-compose.yml
.github/workflows/: ci.yml
docs/: secrets.md
proto/: CMakeLists.txt
scripts/: fetch_moex_data.py
src/: CMakeLists.txt  main.cpp
src/auth/: CMakeLists.txt  token_manager.cpp  token_manager.hpp
src/connectivity_check/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  backoff.hpp  contract.hpp  event_bus.hpp  grpc_fmt.hpp  health_server.hpp  interfaces.hpp  maintenance.hpp  spsc_queue.hpp
src/market_data/: CMakeLists.txt  market_data_client.cpp  market_data_client.hpp
src/order/: CMakeLists.txt  order_client.cpp  order_client.hpp  order_executor.hpp
src/risk/: CMakeLists.txt  risk_manager.cpp  risk_manager.hpp
src/strategy/: CMakeLists.txt  confluence_strategy.hpp  ofi_types.hpp  order_book_state.hpp  session_context.hpp  spoof_filter.hpp  strategy_runner.hpp  trade_flow_analyzer.hpp
tests/: CMakeLists.txt
tests/backtest/: CMakeLists.txt  backtest_main.cpp  backtest_runner.cpp  backtest_runner.hpp
tests/integration/: CMakeLists.txt  test_auth_flow.cpp
tests/unit/: CMakeLists.txt  test_backoff.cpp  test_confluence.cpp  test_contract.cpp  test_risk.cpp  test_session_context.cpp
